Workaround for MariaDB 10.3 mysql_stmt_fetch bug MDEV-18143